--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 *.jl.*.cov
 *.jl.cov
 *.jl.mem
-/Manifest.toml
+/Manifest*.toml
 /docs/build/
 /tmp
-docs/Manifest.toml
-test/Manifest.toml
+docs/Manifest*.toml
+test/Manifest*.toml
