move from CompatHelper to dependabot

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -71,4 +71,4 @@ jobs:
             using Documenter: DocMeta, doctest
             using Bigleaf
             DocMeta.setdocmeta!(Bigleaf, :DocTestSetup, :(using Bigleaf); recursive=true)
-            doctest(Bigleaf)'
+            doctest(Bigleaf)
