--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,3 +7,11 @@ updates:
     schedule:
       # Check for updates to GitHub Actions every week
       interval: "weekly"
+  - package-ecosystem: "julia" # See documentation for possible values
+    directories:
+    - "/"
+    - "/docs"
+    - "/test"
+    schedule:
+      interval: "weekly"
+      
