--- a/test/Project.toml
+++ b/test/Project.toml
@@ -1,4 +1,5 @@
 [deps]
+Bigleaf = "e2ae9153-b66f-47c5-85f1-c6d65380123f"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Missings = "e1d29d7a-bbdc-5cf2-9ac0-f12de2c33e28"
